<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_undo"
        android:icon="@drawable/ic_undo"
        android:title="@string/action_undo"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_redo"
        android:icon="@drawable/ic_redo"
        android:title="@string/action_redo"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_find"
        android:icon="@drawable/ic_search"
        android:title="@string/action_find"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_save"
        android:title="@string/action_save"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_open_file"
        android:title="@string/action_open_file"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_open_folder"
        android:title="@string/action_open_folder"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_new_file"
        android:title="@string/action_new_file"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_save_as"
        android:title="@string/action_save_as"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_goto_line"
        android:title="@string/action_goto_line"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_share"
        android:title="@string/action_share"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>
